fix visibility icons not being centered on firefox

--- a/timesite/backend/static/style.css
+++ b/timesite/backend/static/style.css
@@ -571,7 +571,7 @@ font-size: 1rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    justify-self: center;
+    /*justify-self: center;*/
     align-items: center;
     text-align: center;
     gap: 1rem;
